# Beebot

./: .gitignore  Cargo.toml
migrations/2023-11-23-020926_create_activity_logs/: down.sql  up.sql
src/: db.rs  integrations.rs  mail.rs  main.rs  parser.rs  requests.rs  schema.rs  slack.rs  slack_integration.rs  utils.rs  validators.rs
