[package]
name = "beebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.34.0", features = ["full"] }
dotenv = "0.15.0"
futures = { version = "0.3.29", features = [] }
scraper = "0.18.1"
serde_json = "1.0.108"
chrono = "0.4.31"
chrono-tz = "0.8.4"
simplelog = "0.12.1"
log = "0.4.20"
diesel = { version = "2.1.4", features = ["sqlite"] }
clap = { version = "4.4.8", features = ["derive"] }
base64 = "0.21.5"
http-auth-basic = "0.3.3"

[dev-dependencies]
diesel_cli = { version = "2.1.1", features = ["sqlite"] }
